Issue #29 #33 start of #37

--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sound Record</string>
+    <string name="title_activity_home">Home</string>
+    <string name="title_activity_my_tests">MyTests</string>
 </resources>
