--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_home">Home</string>
     <string name="title_activity_my_tests">My Tests</string>
     <string name="title_activity_my_account">My Account</string>
+    <string name="title_activity_results">Results</string>
+    <string name="radio_button_good">Positive result</string>
+    <string name="radio_button_bad">Negative result</string>
 </resources>
