--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_results">Results</string>
     <string name="radio_button_good">Positive result</string>
     <string name="radio_button_bad">Negative result</string>
+    <string name="title_activity_trials">Trials</string>
 </resources>
