Completed Processing Activity. Closes #35

--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="radio_button_good">Positive result</string>
     <string name="radio_button_bad">Negative result</string>
     <string name="title_activity_trials">Trials</string>
+    <string name="title_activity_processing">Processing</string>
 </resources>
