--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Sound Record</string>
+    <string name="title_activity_home">Home</string>
+    <string name="title_activity_my_tests">My Tests</string>
+    <string name="title_activity_my_account">My Account</string>
+    <string name="title_activity_results">Results</string>
+    <string name="radio_button_good">Positive result</string>
+    <string name="radio_button_bad">Negative result</string>
+    <string name="title_activity_trials">Trials</string>
+    <string name="title_activity_processing">Processing</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
