--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="title_activity_processing">Processing</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_form_pdf">FormPDF</string>
+
+    //form PDF strings
     <string name="action_settings">Settings</string>
     <string name="job_no">Job Number</string>
     <string name="contract">Contract</string>
@@ -32,5 +34,37 @@
     <string name="uncertainty_measurement">Uncertainty Measurement</string>
     <string name="substarte_type">Substrate Type</string>
     <string name="test_conditions">Test Conditions</string>
+
+    //Radio buttons stuff in PDF form
     <string name="other_option">"Other (please specify)"</string>
+    <string name="select_version">Select the version:</string>
+    <string name="quality">FIFA Quality 0.6 - 1.0m</string>
+    <string name="quality_pro">FIFA Quality Pro 0.6 - 0.85m</string>
+    <string name="select_equipment">Select the equipment set:</string>
+    <string name="uk1">UK 1</string>
+    <string name="uk2">UK 2</string>
+    <string name="flight3">Flight 3</string>
+    <string name="flight4">Flight 4</string>
+    <string name="flight5">Flight 5</string>
+
+    //Buttons names
+    <string name="submit">Submit</string>
+    <string name="football">Football</string>
+    <string name="rugby">Rugby</string>
+    <string name="tennis">Tennis</string>
+    <string name="hockey">Hockey</string>
+    <string name="createPDF">Create PDF</string>
+
+    <string name="choose_test">Choose the test</string>
+
+    //ResultsActivity table
+    <string name="loc1">1</string>
+    <string name="loc2">2</string>
+    <string name="loc3">3</string>
+    <string name="loc4">4</string>
+    <string name="loc5">5</string>
+    <string name="loc6">6</string>
+    <string name="avg">Average</string>
+
+
 </resources>
