#66 #62 Added functionality to add radio buttons and some form validation

--- a/SoundRecord/app/src/main/res/values/strings.xml
+++ b/SoundRecord/app/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="loc5">5</string>
     <string name="loc6">6</string>
     <string name="avg">Average</string>
+    <string name="fifa_quality_pro">FIFA Quality Pro: 0.6 - 0.85m</string>
+    <string name="fifa_normal">FIFA Quality: 0.6 - 1.0m</string>
 
 
 </resources>
